# application-hub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 025eb7f20441_add_reminders_table.py  965d5536586e_add_applications_table.py  da5194472e43_initial_users_and_tenants.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: error_handler.py  request_id.py
backend/app/models/: __init__.py  application.py  reminder.py  tenant.py  tenant_user.py  user.py
backend/app/repositories/: application_repository.py  reminder_repository.py
backend/app/schemas/: application.py  auth.py  clean_input_model.py  reminder.py  token_payload.py  token_response.py  (+2 more)
backend/tests/: conftest.py  test_api_deps.py  test_api_router.py  test_application_model.py  test_application_repository.py  test_application_routes.py  test_application_schema.py  test_application_service.py  test_auth_routes.py  test_auth_service.py  test_db_session.py  test_lifespan.py  test_logging_core.py  test_middleware_request_tracing.py  test_reminder_model.py  test_reminder_repository.py  test_reminder_routes.py  test_reminder_service.py  test_security.py  test_smoke.py  test_tenant_model.py  test_tenant_user_model.py  test_token_schemas.py  test_user_create_schema.py  test_user_login_schema.py  test_user_model.py
(+64 files in other folders)
